--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,8 @@
   text-decoration: none;
 }
 .Header-container{
-    background-color: #1877F2;
+    background-color: #1877f2;
+   /* background-color: #DCE6F0; */
     height: 50px;
     display: flex;
     align-items: center;
