--- a/src/components/AboutUs/index.css
+++ b/src/components/AboutUs/index.css
@@ -5,8 +5,13 @@
     border-radius: 8px;
     box-shadow: 0 2px 8px #0000001a;
     font-family: Arial, sans-serif;
-    background: #f9f9f9;
+    /* background: #f9f9f9; */
     color: #333;
+
+    background-color: white;
+    border-radius: 10px;
+   margin: 15px auto;
+    width: 98%;
       
     }
 
@@ -16,9 +21,15 @@
     }
 
     .about-profile {
-      margin-bottom: 20px;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 15px;
+      margin: 20px;
+      /* border-bottom: 1px solid #ddd; */
+      /* padding-bottom: 15px;
+       */
+       padding: 25px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      border: 2px solid #EAEAEA;  
     }
 
     .about-profile h2 {
@@ -44,6 +55,9 @@
 
     .text-info {
       flex: 1;
+      
+      
+
     }
 
     .profile-image-small {
@@ -79,7 +93,8 @@
     .rti-member-bio-image-container{
      width: 100%; 
      display: flex;
-     align-items: center;
+     /* align-items: center; */
+     align-items: flex-start;
      justify-content: space-between;
      
     }
@@ -87,7 +102,7 @@
       width: 75%;
     }
     .profile-image-large{
-        width: 20%;
+        width: 15%;
     
       border-radius: 8px;
       
