--- a/src/components/AddsBanner/index.css
+++ b/src/components/AddsBanner/index.css
@@ -31,6 +31,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
         margin: 5px;
     }
     .add-banner-img{
