--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -196,13 +196,16 @@
  }
  .slider-container .swiper-button-next::after,
 .slider-container .swiper-button-prev::after{
-  font-size: 20px;
+  font-size: 20px !important;
 }
 .slider-container .swiper-button-next{
-  right: 5%;
+  /* right: 10px !important; */
+  display: none;
 }
 .slider-container .swiper-button-prev{
-  left: 5%;
+  /* left: 10px !important; */
+    display: none;
+
 }
 /* .home-spot-light-adds-container{
   display: flex;
