--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,9 +5,12 @@
   text-decoration: none;
 }
 .Header-container{
-    background-color: #1877f2;
-   /* background-color: #DCE6F0; */
-    height: 50px;
+    /* background-color: #1877f2; */
+   background-color: #1E3A2F;   
+/* background: linear-gradient(180deg, #2E2E2E 0%, #4A4A4A 100%); */
+
+    /* height: 50px; */
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
