--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,8 +6,8 @@
 }
 .Header-container{
     /* background-color: #1877f2; */
-   background-color: #1E3A2F;   
-/* background: linear-gradient(180deg, #2E2E2E 0%, #4A4A4A 100%); */
+   background-color: #F08C56;   
+/* background: linear-gradient(180deg, #EAF2FF 0%, #D9E8FF 100%); */
 
     /* height: 50px; */
     height: 100px;
