--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,8 +5,8 @@
   text-decoration: none;
 }
 .Header-container{
-    /* background-color: #1877f2; */
-   background-color: #F08C56;   
+    background-color: #1877f2;     
+   /* background-color: #E07C6E;   #F08C56  */
 /* background: linear-gradient(180deg, #EAF2FF 0%, #D9E8FF 100%); */
 
     /* height: 50px; */
