--- a/src/components/National/index.css
+++ b/src/components/National/index.css
@@ -1,9 +1,9 @@
-.unordered-international-news-container{
+/* .unordered-international-news-container{
     list-style-type: none;
     background-color: white;
     margin: 15px;
    border: 1px solid #E0E0E0;
-  padding: 50px;
+  padding: 30px;
   border-radius: 20px;
   display: flex;
  flex-direction: row;
@@ -15,7 +15,7 @@
   border-radius: 8px;
   padding: 16px 20px;
   margin: 8px;
-  flex: 0 1 31%;
+  flex: 0 1 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,4 +30,4 @@
 .international-news-item-text{
     text-align: center;
     margin-top: 10px;
-}
+} */
