--- a/src/components/ContactUs/index.css
+++ b/src/components/ContactUs/index.css
@@ -1,4 +1,12 @@
-  .map-container iframe {
+ .contact-us-container{
+   margin: 30px ;
+    border-radius: 10px;
+    border: 2px solid #E0E0E0;
+ 
+   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+   background-color: #FFFFFF;
+ }
+ .map-container iframe {
       width: 100%;
       height: 400px;
       border: none;
@@ -8,10 +16,10 @@
       display: flex;
       flex-wrap: wrap;
       padding: 40px;
-      background-color: white;
+      /* background-color: white; */
       max-width: 1200px;
       margin: 0 auto;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      /* box-shadow: 0 0 10px rgba(0,0,0,0.1); */
     }
 
     .contact-info, .contact-form {
