--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,8 @@
 .logo-rti-express-header{
-  display: block;      /* remove inline spacing */
-  height: 60px;        /* desired height */
+  display: block;      
   width: auto;
+  height: 60px;
+  object-fit: cover;
 }
 
 .header-link-item{
@@ -11,12 +12,13 @@
   text-decoration: none;
 }
 .Header-container{
-    background-color: #1877f2;     
+    /* background-color: #1877f2;      */
+    background-color: #1A71B6;
    /* background-color: #E07C6E;   #F08C56  */
 /* background: linear-gradient(180deg, #EAF2FF 0%, #D9E8FF 100%); */
 
     /* height: 50px; */
-    height: 100px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -38,7 +40,8 @@
 
 #home{
     color: #FFFFFF;
-    font-weight: 500;
+    font-weight: 700;
+   
 }
 
 /* #home:hover{ */
