--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -46,18 +46,44 @@
   font-size: 30px;
 }
 
+.rti-join-buttons-activist-reporter-citizen-container{
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height:360px;
+}
+
+.reporter-button{
+  background-color: #1A71B6;
+  width: 60%;
+  height: 100px;
+  border: none;
+ cursor: pointer;
+  color: #FFFFFF;
+  font-weight: 800;
+  font-family: "Inter";
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  font-size: 25px !important;
+}
+
 .slider-top-rti-join-container{
   display: flex;
   flex-direction: row;
   align-items: center;
   /* margin: 20px; */
 }
-.rti-join-and-news-letter-container{
+/* .rti-join-and-news-letter-container{
    display: flex;
   flex-direction: column;
   
-}
-.rti-join-container{
+} */
+/* .rti-join-container{
   background-color: #1877F2B2;
   width: 400px;
   height: 200px;
@@ -66,31 +92,17 @@
   align-items: center;
   justify-content: space-evenly;
   border-radius: 5px;
-}
-.join-heading{
+} */
+/* .join-heading{
   color:#FFFFFF;
   font-weight: 800;
   font-size: 24px;
   
   font-family: "Manrope";
   padding: 10px;
-}
-.reporter-button{
-  background-color: #D23030;
-  width: 80%;
-  height: 40px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  color: #FFFFFF;
-  font-weight: 800;
-  font-family: "Inter";
-  text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-.news-letter-container{
+} */
+
+/* .news-letter-container{
   background-color: #D5DCFF;
   width: 400px;
   height: 200px;
@@ -101,8 +113,8 @@
   align-items: center;
   justify-content: space-evenly;
   padding: 10px;
-}
-.daily-news-letter-heading{
+} */
+/* .daily-news-letter-heading{
   color: #000000;
   font-family: "Manrope";
   font-size: 24px;
@@ -116,8 +128,8 @@
   font-weight: 500;
   text-align: center;
 
-}
-.news-letter-mail-container{
+} */
+/* .news-letter-mail-container{
   background-color: #007BFF;
   border-radius: 5px;
  color: #FFFFFF;
@@ -136,12 +148,12 @@
    padding: 10px;
    width: 90%;
    font-size: 15px;
-}
-.news-letter-mail-container input::placeholder{
+} */
+/* .news-letter-mail-container input::placeholder{
  
   color: #FFFFFF;
   font-size: 15px;
-}
+} */
 .spot-light-home-container{
     width: 65%;
     margin-left: 35px;
@@ -512,18 +524,50 @@
 
 @media (min-width:1200px){
   .slider-container{
-    width: 65%;
-    
+   width: 65%;
+   margin: 0 auto;
+   position: relative;
+  
 }
+
 .slider-image{
-    width: 75%;
-    
-    height: 350px;
-    margin: 0 auto;
-    display: block;
+ width: 90%;
+ height: auto;
+ border-radius: 6px;
+ max-height: 360px; 
+display: block;
 }
+
+.swiper-button-next,
+.swiper-button-prev{
+   width: 30px;               
+  height: 30px;              
+  background-color:#F0F0F0; 
+  color: black;              
+        
+  display: flex;
+  align-items: center;       
+  justify-content: center;   
+  top: 50%;                  
+  transform: translateY(-50%); 
+  z-index: 10;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after{
+   font-size: 20px;
+  font-weight: bold;
+}
+
+
+
+
+
 .slider-top-rti-join-container{
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .rti-join-and-news-letter-container{
   width:30%;
