--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,9 +1,6 @@
 .footer-main-container{
-    /* background-color: #F2F2F2; */
-   /* background-color: #E0E0E0;  */
-   /* background-color: #DDDCD8; */
-   background-color: #333333;
-   /* background-color: #D6CFC7; */
+   
+   background-color: #1A71B6;
     padding:25px;
   
 }
