--- a/src/components/PopularNews/index.css
+++ b/src/components/PopularNews/index.css
@@ -1,5 +1,5 @@
 .popular-news-image{
-    width: 200px;
+    width: 90%;
     height: 200px;
 }
 .popular-news-unordered-container{
@@ -16,7 +16,7 @@
   border-radius: 8px;
   margin: 20px 0;
   border: 1px solid #E0E0E0;
-  width: 96%;
+  width: 98%;
 
 }
 .popular-news-item-card{
@@ -27,8 +27,8 @@ margin: 5px;
     /* box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2); */
 /* padding: 10px; */
 /* border-radius: 5px;  */
-width: 45%;
-
+/* width: 45%; */
+flex: 1 1 20%;
 
 /* adding */
 background-color: #FFFFFF;
