--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -155,10 +155,29 @@
   color: #FFFFFF;
   font-size: 15px;
 } */
+.spot-light-home-adds-container{
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.add-banner-image-home-1{
+  /* width: auto;
+  height:400px; */
+  width:100%;
+   height: 500px ;
+   max-width: 100%;
+    max-height: 400px;
+    margin-bottom: 10px;
+}
+
+.adds-size-container-home{
+  width: 25%;
+}
+
 .spot-light-home-container{
-    width: 65%;
-    margin-left: 35px;
-    margin-top: 20px;
+   width: 50%;
+    
 } 
 
 
@@ -168,19 +187,19 @@
   align-items: center;
 } */
 
-.home-spot-light-popular-news-adds-container{
+/* .home-spot-light-popular-news-adds-container{
   display: flex;
   flex-direction: row;
   margin-top: 20px;
-}
+} */
 
-.spot-light-popular-news-container{
+/* .spot-light-popular-news-container{
   width: 80%;
-}
+} */
 
 
 .home-popular-news-container{
-  width: 65%;
+  width: 100%;
   margin-left: 40px;
     margin-top: 20px;
 }
