--- a/src/components/TodaysSpotLight/index.css
+++ b/src/components/TodaysSpotLight/index.css
@@ -5,12 +5,12 @@
     flex-direction: row;
     flex-wrap: wrap;
     /* added from */
-    width: 96%;
+    /* width: 98%; */
 
-     background-color: #FFFFFF; /* or #FFFFFF */
-  padding: 20px;
+  background-color: #FFFFFF; /* or #FFFFFF */
+  padding: 10px;
   border-radius: 8px;
-  margin: 20px 0;
+  margin: 20px 10px;
   border: 1px solid #E0E0E0;
 }
 .spot-light-image{
@@ -18,33 +18,12 @@
     height: 150px;
 }
 .spot-light-list-item-container{
-  /* width: 45%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 5px;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-    padding: 15px;
-    border-radius: 5px;  */
-
- /* flex: 1 1 45%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 8px;
-  padding: 16px 20px;
-  background-color: #FFFFFF;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15); */
-
-
 
   background-color: #FFFFFF;
-  
   border-radius: 8px;
   padding: 16px 20px;
   margin: 8px;
-  flex: 1 1 45%;
+  flex: 1 1 40%;
   display: flex;
   flex-direction: row;
   align-items: center;
