ap-telangana-added-changed-layout

--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,18 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  font-family: 'Noto Sans Telugu','Times New Roman';
+ 
 
 }
 body{
 overflow-x: hidden;
 background-color: #F9F9F6;
+font-family: 'Times New Roman';
 
 }
+:lang(te) {
+      font-family: 'Noto Sans Telugu';
+  }
 .drop-down-container{
     background-color: transparent;
     border: none;
@@ -33,7 +37,7 @@ background-color: #F9F9F6;
 .top-container{
   background-color: #D9D9D9;
  
-  height: 46px;
+  height: 40px;
   display: flex;
   flex-direction: row;
   align-items: center;
