--- a/src/components/CategoryBasedItem/index.css
+++ b/src/components/CategoryBasedItem/index.css
@@ -187,3 +187,16 @@ display: flex;
     text-decoration: none;        /* remove underline */
     color: inherit;    
 }
+.breaking-news-heading{
+    background-color: #F4796C;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 800;
+    height: 40px;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   margin: 50px 0px 15px 50px;
+   clip-path: polygon(20px 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
+}
