--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,10 @@
 .logo-rti-express-header{
   display: block;      
   width: auto;
-  height: 60px;
+  height: 74px;
   object-fit: cover;
+ 
+ 
 }
 
 .header-link-item{
@@ -12,25 +14,47 @@
   text-decoration: none;
 }
 .Header-container{
-    /* background-color: #1877f2;      */
-    background-color: #1A71B6;
-   /* background-color: #E07C6E;   #F08C56  */
-/* background: linear-gradient(180deg, #EAF2FF 0%, #D9E8FF 100%); */
-
-    /* height: 50px; */
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    /* justify-content: space-between; */
-    /* justify-content: space-around; */
-    padding: 10px 20px;
+    
     box-sizing: border-box;
-     z-index: 10;
-
-  position: sticky; /* key */
-  top: 0;        
+    z-index: 10;
+    position: sticky; 
+    top: 0;   
+  width: 95%;  
+  height: 80px;
+  display: flex;
+  align-items: center; 
+  padding: 0 2px;
+  margin: 3px auto;
+  border: 2px solid #1A71B6;
+  
+    /* align-items: stretch; new one */
 }
+
+.header-items-container{
+  
+    background-color: #1A71B6; 
+  display: flex;
+  align-items: center; 
+  justify-content: space-evenly;
+  height: 96%;
+ 
+  width: 100%;
+  
+    
+  
+    
+}
+.header-items-separator-container{
+    width: 4px; 
+    margin: 0 2px;
+     background-color: #1A71B6; 
+     height: 100%;
+     padding: 0px;
+     flex-shrink:0 ;
+      
+}
+
+
 .header-items-to-navigate{
   display: flex;
   align-items: center;
@@ -46,16 +70,20 @@
 
 /* #home:hover{ */
   .active{
-  background-color: #f085ba;
-  padding: 15px 10px;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
+
+   text-decoration: underline;
+  text-underline-offset: 6px; 
+  text-decoration-thickness: 3px;
+  /* background-color: #f085ba; */
+  /* padding: 15px 10px; */
+  /* border-radius: 5px; */
+  /* color: white; */
+  /* font-weight: bold; */
   
-  display: flex;           /* use flex to center text */
-  align-items: center;     /* vertical center */
-  justify-content: center; /* horizontal center */
-  text-align: center;  
+  /* display: flex;           */
+  /* align-items: center;     */
+  /* justify-content: center;  */
+  /* text-align: center;   */
 
     /* color: #FF69B4;
     text-decoration: underline; */
