--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,29 +1,48 @@
 .footer-main-container{
    
-   background-color: #1A71B6;
-    padding:25px;
   
+   width: 98%;
+   margin: 5px auto;
+   padding:5px  ;
+   border: 2px solid #1A71B6;
+  
+
+  
+}
+
+.background-colour-container{
+ background-color: #1A71B6;
+ height: 98%;
+ padding: 10px;
 }
 .footer-info-containerss{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    
 }
 .website-info-in-footer{
     width: 28%;
-    margin-top: 15px;
+   margin-top: 6px;
 }
 
 .footer-image-logo{
-    width: 10%;
-    height: auto;
+    /* width: 10%;
+    height: auto; */
+   display: block;      
+  width: auto;
+  height:80px;
+  object-fit: cover;
+  margin-bottom: 3px;
+ 
 }
 .website-info-in-footer p{
     /* color: #DDEEFF; */
     color: #FFFFFF;
     font-size: 15px;
     font-weight: 500;
+    margin-bottom: 3px;
    
 }
 .company-name-heading{
@@ -53,7 +72,7 @@
 color: #FFFFFF;
     font-size: 15px;
     font-weight: 500;
-    margin-bottom: 6px;
+    margin-bottom: 10px;
     white-space: normal;
 word-break: break-word;
 overflow-wrap: break-word;
