--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -192,6 +192,7 @@
     justify-content: center;
    margin: 30px 0px 20px 250px;
    clip-path: polygon(20px 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
+   border-radius: 10px;
 }
 
 .recent-posts-heading{
