--- a/src/components/TermsAndConditions/index.css
+++ b/src/components/TermsAndConditions/index.css
@@ -1,9 +1,9 @@
 .terms-an-conditions-container{
-    padding: 10px 50px 20px 50px;
+    padding: 30px 12px ;
 }
 
 .terms-an-conditioner-internal-container{
-    margin: 20px;
+    margin: 0px;
     border-radius: 10px;
     border: 2px solid #E0E0E0;
     padding: 15px 5%;
